--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,8 +91,3 @@ footer {
   line-height: 46px;
   padding-left: 10%;
 }
-
-.container {
-  height: 100% !important;
-  min-height: 100%; 
-} 
